fixed some spacing issues by adding a display and block decleration to main selector

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,8 @@ h1 {
 
 main {
     max-width: 840px;
+    margin: auto;
+    display: block;
 }
 
 main img {
